Fonts,Flickerings,Fixing New Message view

--- a/FreeChat/Content/Site.css
+++ b/FreeChat/Content/Site.css
@@ -2,7 +2,7 @@
     padding-top: 50px;
 
     background-color: white !important;
-    font-family: 'Open Sans', sans-serif!important;
+    font-family: 'Dosis', sans-serif!important;
 }
 
 body, html {
