--- a/FreeChat/Content/about.css
+++ b/FreeChat/Content/about.css
@@ -1,5 +1,5 @@
 ﻿body{
-    font-family:Open sans;
+    font-family: 'Dosis'!important;
 }
 #aboutrow{
     margin-top:50px;
